--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-        package-name: ["geos_ats_package" "geosx_mesh_doctor" "geosx_mesh_tools_package" "geosx_xml_tools_package" "hdf5_wrapper_package" "pygeosx_tools_package" "timehistory_package"]
+        package-name: ["geos_ats_package", "geosx_mesh_doctor", "geosx_mesh_tools_package", "geosx_xml_tools_package", "hdf5_wrapper_package", "pygeosx_tools_package", "timehistory_package"]
 
     steps:
     - uses: actions/checkout@v3
