--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,17 +24,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install package
-      working-directory: ./${{ package-name }}
+      working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest yapf toml
         cd 
         python -m pip install .
     - name: Lint with yapf
-      working-directory: ./${{ package-name }}
+      working-directory: ./${{ matrix.package-name }}
       run: |
         yapf -r --diff .
     # - name: Test with pytest
-    #   working-directory: ./${{ package-name }}
+    #   working-directory: ./${{ matrix.package-name }}
     #   run: |
     #     pytest
