--- a/timehistory_package/setup.cfg
+++ b/timehistory_package/setup.cfg
@@ -8,7 +8,7 @@ license = LGPL-2.1
 
 [options]
 packages =
-    plot_time_history
+    timehistory
 install_requires =
     matplotlib
     hdf5_wrapper
