Setup the geos python package CI (#4)
Setting up the python package CI

--- a/timehistory_package/setup.cfg
+++ b/timehistory_package/setup.cfg
@@ -8,9 +8,9 @@ license = LGPL-2.1
 
 [options]
 packages =
-    plot_time_history
+    timehistory
 install_requires =
     matplotlib
-    hdf5_wrapper
+    h5py
     numpy
 python_requires = >=3.6
