--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,10 +30,10 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pytest yapf toml
         python -m pip install .
-    # - name: Lint with yapf
-    #   working-directory: ./${{ matrix.package-name }}
-    #   run: |
-    #     yapf -r --diff .
+    - name: Lint with yapf
+      working-directory: ./${{ matrix.package-name }}
+      run: |
+        yapf -r --diff .
     # - name: Test with pytest
     #   working-directory: ./${{ matrix.package-name }}
     #   run: |
