--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Lint with yapf
       working-directory: ./${{ matrix.package-name }}
       run: |
-        yapf -r --diff .
+        yapf -r --diff . --style ../.style.yapf
     # - name: Test with pytest
     #   working-directory: ./${{ matrix.package-name }}
     #   run: |
