Removing unused code, fixing reports

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -16,6 +16,7 @@ install_requires =
     mpi4py
     numpy
     lxml
+    tabulate
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
 
