--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,12 +25,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     - name: Install package
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest yapf toml
-        python -m pip install ${{ matrix.package-name }}
+        python -m pip install ${{ matrix.package-name }}/
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
       run: |
