--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -2,6 +2,28 @@
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "pygeosx-tools"
+version = "0.1.0"
+description = "Tools for interacting with pygeosx"
+author = [
+    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
+]
+license = {text = "LGPL-2.1"}
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python"
+]
+
+requires-python = ">=3.8"
+
+dependencies = [
+    "matplotlib",
+    "numpy",
+    "scipy",
+    "mpi4py",
+]
+
 [tool.mypy]
 python_version = "3.8"
 warn_return_any = true
