--- a/hdf5-wrapper/pyproject.toml
+++ b/hdf5-wrapper/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "geos-hdf5-wrapper"
+name = "hdf5-wrapper"
 version = "0.2.0"
 description = "Simple wrapper for h5py objects"
 maintainers = [
@@ -19,8 +19,7 @@ dependencies = [
 ]
 
 [project.scripts]
-    hdf5_wrapper_tests = hdf5wrapper.wrapper_tests:main
-
+    hdf5_wrapper_tests = "hdf5wrapper.wrapper_tests:main"
 
 [tool.mypy]
 python_version = "3.8"
