--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "pygeosx-tools"
 version = "0.1.0"
 description = "Tools for interacting with pygeosx"
-author = [
+maintainers = [
     {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
 ]
 license = {text = "LGPL-2.1"}
