--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -17,6 +17,8 @@ install_requires =
     numpy
     lxml
     tabulate
+    pyyaml
+    google-cloud
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
 
