Fixing package import bug

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -18,7 +18,7 @@ install_requires =
     lxml
     tabulate
     pyyaml
-    google-cloud
+    google-cloud-storage
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
 
