--- a/hdf5-wrapper/pyproject.toml
+++ b/hdf5-wrapper/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.scripts]
-    hdf5_wrapper_tests = "hdf5wrapper.wrapper_tests:main"
+    hdf5_wrapper_tests = "geos.hdf5wrapper.wrapper_tests:main"
 
 [tool.mypy]
 python_version = "3.8"
