--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
+    - uses: ammaraskar/sphinx-action@7.2.6
       with:
         docs-folder: "docs/"
         build-command: "sphinx-build -b html . _build"
