--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -18,6 +18,8 @@ install_requires =
     lxml
     tabulate
     pyyaml
+    tqdm
+    requests
     google-cloud-storage
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
