Adding simple log check script

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -28,3 +28,6 @@ python_requires = >=3.7
 console_scripts =
     run_geos_ats = geos_ats.main:main
     setup_ats_environment = geos_ats.environment_setup:main
+    geos_ats_log_check = geos_ats.helpers.log_check:main
+    geos_ats_restart_check = geos_ats.helpers.restart_check:main
+    geos_ats_curve_check = geos_ats.helpers.curve_check:main
