--- a/geosx_mesh_doctor/setup.cfg
+++ b/geosx_mesh_doctor/setup.cfg
@@ -21,4 +21,4 @@ python_requires = >=3.7
 
 [options.entry_points]
 console_scripts =
-    mesh_doctor = mesh_doctor.main:test
+    mesh_doctor = mesh_doctor.main:main
