Updating html report style

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -24,6 +24,9 @@ install_requires =
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
 
+[options.package_data]
+* = *.png
+
 [options.entry_points]
 console_scripts =
     run_geos_ats = geos_ats.main:main
