--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
 python_requires = >=3.7
 
 [options.package_data]
-* = *.png
+* = *.js, *.css
 
 [options.entry_points]
 console_scripts =
