Adding additional assets to html report

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -9,6 +9,7 @@ license = LGPL-2.1
 [options]
 packages =
     geos_ats
+    geos_ats.assets
     geos_ats.helpers
     geos_ats.machines
 install_requires =
@@ -25,7 +26,7 @@ install_requires =
 python_requires = >=3.7
 
 [options.package_data]
-* = *.js, *.css
+* = *.js, *.css, *.zip
 
 [options.entry_points]
 console_scripts =
