Adding baseline history file

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -21,6 +21,7 @@ install_requires =
     pyyaml
     tqdm
     requests
+    GitPython
     google-cloud-storage
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
