Adding an additional prerequisite to geos_ats

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     requests
     GitPython
     google-cloud-storage
+    pip-system-certs
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
 
