Update integrated test baseline storage (#14)

--- a/geos_ats_package/setup.cfg
+++ b/geos_ats_package/setup.cfg
@@ -9,6 +9,7 @@ license = LGPL-2.1
 [options]
 packages =
     geos_ats
+    geos_ats.assets
     geos_ats.helpers
     geos_ats.machines
 install_requires =
@@ -17,10 +18,22 @@ install_requires =
     numpy
     lxml
     tabulate
+    pyyaml
+    tqdm
+    requests
+    GitPython
+    google-cloud-storage
+    pip-system-certs
     ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
 python_requires = >=3.7
+
+[options.package_data]
+* = *.js, *.css, *.zip
 
 [options.entry_points]
 console_scripts =
     run_geos_ats = geos_ats.main:main
     setup_ats_environment = geos_ats.environment_setup:main
+    geos_ats_log_check = geos_ats.helpers.log_check:main
+    geos_ats_restart_check = geos_ats.helpers.restart_check:main
+    geos_ats_curve_check = geos_ats.helpers.curve_check:main
