--- a/geos-ats/pyproject.toml
+++ b/geos-ats/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
 [project.scripts]
 run_geos_ats = "geos.ats.main:main"
 setup_ats_environment = "geos.ats.environment_setup:main"
-geos_ats_log_check = "geos_ats.helpers.log_check:main"
+geos_ats_log_check = "geos.ats.helpers.log_check:main"
 geos_ats_restart_check = "geos.ats.helpers.restart_check:main"
 geos_ats_curve_check = "geos.ats.helpers.curve_check:main"
 
