--- a/geos-xml-tools/pyproject.toml
+++ b/geos-xml-tools/pyproject.toml
@@ -20,11 +20,11 @@ dependencies = [
 ]
 
 [project.scripts]
-    preprocess_xml = "geos.xml.tools.main:preprocess_serial"
-    format_xml = "geos.xml.tools.xml_formatter:main"
-    test_geosx_xml_tools = "geos.xml.tools.tests.test_manager:main"
-    check_xml_attribute_coverage = "geos.xml.tools.attribute_coverage:main"
-    check_xml_redundancy = "geos.xml.tools.xml_redundancy_check:main"
+    preprocess_xml = "geos.xml_tools.main:preprocess_serial"
+    format_xml = "geos.xml_tools.xml_formatter:main"
+    test_geosx_xml_tools = "geos.xml_tools.tests.test_manager:main"
+    check_xml_attribute_coverage = "geos.xml_tools.attribute_coverage:main"
+    check_xml_redundancy = "geos.xml_tools.xml_redundancy_check:main"
 
 [tool.mypy]
 python_version = "3.8"
