--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "geos-mesh-doctor"
+name = "geos-mesh"
 version = "0.0.1"
 description = "GEOS mesh tools"
 authors = [{name = "GEOS Contributors" }]
