--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pygeosx-tools"
+name = "pygeos-tools"
 version = "0.1.0"
 description = "Tools for interacting with pygeosx"
 maintainers = [
