--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        package-name: ["geos-ats", "geos-mesh-doctor", "geos-mesh-tools", "geos-timehistory", "geos-xml-tools", "hdf5-wrapper", "pygeos-tools"]
+        package-name: ["geos-ats", "geos-mesh", "geos-timehistory", "geos-xml-tools", "hdf5-wrapper", "pygeos-tools"]
 
     steps:
     - uses: actions/checkout@v3
