--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,9 +18,9 @@ build:
     - npm install -g @mermaid-js/mermaid-cli@10.3.1
 
 # Set requirements to build the docs
-# python:
-#   install:
-#   - requirements: docs/requirements.txt
+python:
+  install:
+  - requirements: docs/requirements.txt
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
