--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -51,3 +51,6 @@ warn_unused_configs = true
 ignore_missing_imports = true
 allow_redefinition = true
 plugins = "numpy.typing.mypy_plugin"
+
+[tool.setuptools.packages.find]
+where = ["src"]
