--- a/geos-python-interface-tools/pyproject.toml
+++ b/geos-python-interface-tools/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pygeos-tools"
+name = "geos-python-interface-tools"
 version = "0.1.0"
-description = "Tools for interacting with pygeosx"
+description = "Tools for interacting with geos_python_interface"
 maintainers = [
     {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
 ]
