--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
+sphinx >= 7.4.7
 sphinx_rtd_theme
-sphinx-argparse
+sphinx-argparse >= 0.5.2
 sphinx-design
 # Running CLI programs and capture outputs
 sphinxcontrib-programoutput>=0.17
