All the initial files from the Makutu PR are added for future refactoring

--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "numpy",
     "scipy",
     "mpi4py",
+    "vtk",
+    "pyevtk",
+    "xmltodict",
+    "h5py"
 ]
 
 [tool.mypy]
