Fix to wave prop modeling in p4 and p3. Also fix to allow use of python < 3.9

--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "numpy",
     "scipy",
     "mpi4py",
-    "vtk",
+    #    "vtk", # no need, should use the one with geos
     "pyevtk",
     "xmltodict",
     "h5py",
