--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -29,12 +29,7 @@ keywords = [
     "GEOS",
     "Simulation",
 ]
-dependencies = [
-    "vtk >= 9.3",
-    "numpy >= 1.26",
-    "pandas >= 2.2",
-    "typing_extensions >= 4.12",
-]
+dynamic = ["dependencies"]
 requires-python = ">= 3.9"
 
 [project.urls]
