--- a/geos-utils/pyproject.toml
+++ b/geos-utils/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -57,7 +57,7 @@ filterwarnings = []
 
 [tool.coverage.run]
 branch = true
-source = ["pybend"]
+source = ["geos/utils"]
 
 
 [tool.mypy]
