--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -7,7 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@dev
+    - name: Install package
+      # install for vtk lib
+      run: |
+        apt-get update && apt-get install libgl1
+    - name: test doc
+      uses: ammaraskar/sphinx-action@dev
       with:
         docs-folder: "docs/"
         build-command: "sphinx-build -b html . _build"
