--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "pandas >= 2.2",
     "typing_extensions >= 4.12",
 ]
+dynamic = ["dependencies"]
 requires-python = ">= 3.9"
 
 [project.urls]
