Update mypy ci and pyprojects and minor corrections

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Typing check with mypy
       #  working-directory: ./${{ matrix.package-name }}
       run:  |
-        python -m mypy ./${{ matrix.package-name }} --namespace-packages --explicit-package-bases --disallow-subclassing-any --ignore-missing-import
+        python -m mypy ./${{ matrix.package-name }} --config-file ./${{ matrix.package-name }}/pyproject.toml --check-untyped-defs
     - name: Test with pytest
       working-directory: ./${{ matrix.package-name }}
       run: |
