--- a/geos-ats/pyproject.toml
+++ b/geos-ats/pyproject.toml
@@ -51,3 +51,27 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "*" = ["*.js", "*.css", "*.zip"]
+
+[tool.mypy]
+# Specify the target platform details in config, so your developers are
+# free to run mypy on Windows, Linux, or macOS and get consistent
+# results.
+python_version = "3.10"
+exclude = [
+    'src', # disable mypy check for the whole package corrections are done
+] 
+# strict = true
+
+warn_unreachable = true
+implicit_reexport = true
+show_error_codes = true
+show_column_numbers = true
+ignore_missing_imports = true
+warn_unused_configs = true
+
+# Overrides for currently untyped modules
+[[tool.mypy.overrides]]
+module = [
+    "src.*",
+]
+ignore_errors = true
