--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -45,9 +45,25 @@ pythonpath = [
 ]
 
 [tool.mypy]
-python_version = "3.11"
-warn_return_any = true
-warn_unused_configs = true
+# Specify the target platform details in config, so your developers are
+# free to run mypy on Windows, Linux, or macOS and get consistent
+# results.
+python_version = "3.10"
+exclude = [
+    'src', # disable mypy check for the whole package corrections are done
+] 
+# strict = true
+
+warn_unreachable = true
+implicit_reexport = true
+show_error_codes = true
+show_column_numbers = true
 ignore_missing_imports = true
-allow_redefinition = true
-plugins = "numpy.typing.mypy_plugin"
+warn_unused_configs = true
+
+# Overrides for currently untyped modules
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+ignore_errors = true
