--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -40,8 +40,6 @@ Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
 
 [project.optional-dependencies]
 dev = [
-   "black", 
-   "ruff", 
    "mypy", 
 ]
 test = [
@@ -49,9 +47,9 @@ test = [
    "pytest"
 ]
 
-[project.readme]
-file = "README.md"
-content-type = "text/markdown"
+[tool.coverage.run]
+branch = true
+source = ["PVplugins, geos-posp"]
 
 [tool.bumpversion]
 current_version = "1.0.0"
@@ -60,106 +58,26 @@ current_version = "1.0.0"
 filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 
-[tool.ruff]
-target-version = "py39"
-
-src = ["src"]
-
-extend-exclude = ["tests/Data"]
-
-# Same as Black.
-line-length = 88
-indent-width = 4
-
-[tool.ruff.lint]
-select = [
-    "E",    # pycodestyle errors
-    "W",    # pycodestyle warnings
-    "F",    # pyflakes
-#    "UP",   # pyupgrade deactivate since python39
-    "B",    # flake8-bugbear        
-    "SIM",  # flake8-simplify        
-    "ANN",  # flake8-annotations        
-    "C4",   # flake8-comprehensions    
-    "I",    # isort        
-    "D",    # pydocstyle    
-]
-
-ignore = [
-    "E501",  # line too long, handled by black
-    "B008",  # do not perform function calls in argument defaults
-    "C901",  # too complex
-    "W191", # indentation contains tabs
-    "D100",
-    "D101",
-    "D104",  # Missing docstring in public package in __init__.py files
-    "UP007",
-]
-
-# Allow fix for all enabled rules (when `--fix`) is provided.
-fixable = ["ALL"]
-unfixable = []
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-
-[tool.ruff.lint.isort]
-known-third-party = ["pyvista"]
-
-#[tool.ruff.lint.pyupgrade]
-# Preserve types, even if a file imports `from __future__ import annotations`.
-#keep-runtime-typing = true
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
-[tool.ruff.format]
-# Like Black, use double quotes for strings.
-quote-style = "double"
-
-# Like Black, indent with spaces, rather than tabs.
-indent-style = "space"
-
-# Like Black, automatically detect the appropriate line ending.
-line-ending = "auto"
-
-[tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
-console_output_style = "count"
-python_classes = "Test"
-python_files = "tests*.py"
-python_functions = "test*"
-testpaths = ["tests"]
-pythonpath = [
-    "src",
-]
-
-[tool.coverage.run]
-branch = true
-source = ["PVplugins", "geos-posp"]
-
 [tool.mypy]
 # Specify the target platform details in config, so your developers are
 # free to run mypy on Windows, Linux, or macOS and get consistent
 # results.
-python_version = "3.9"
-files = "."
-exclude = "build/*"
+python_version = "3.10"
+exclude = [
+    'build', # if local run
+]
 # strict = true
 
 warn_unreachable = true
 implicit_reexport = true
 show_error_codes = true
 show_column_numbers = true
-disable_error_code = "misc"
+ignore_missing_imports = true
+warn_unused_configs = true
 
 # Overrides for currently untyped modules
 [[tool.mypy.overrides]]
 module = [
-    "docs.*",
-    "docs.ext.*",
-    "tests.unit.*",
+    "tests.*",
 ]
 ignore_errors = true
