--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -129,3 +129,30 @@ profile = "black"
 src_paths = ["src", "tests"]
 blackArgs = ["--preview"]
 py_version = 310
+
+
+[tool.mypy]
+# Specify the target platform details in config, so your developers are
+# free to run mypy on Windows, Linux, or macOS and get consistent
+# results.
+python_version = "3.10"
+exclude = [
+    'build', # build if local run
+    'vue-components', # no type checking 
+    'src' # disable mypy check for the whole package corrections are done
+] 
+# strict = true
+
+warn_unreachable = true
+implicit_reexport = true
+show_error_codes = true
+show_column_numbers = true
+ignore_missing_imports = true
+warn_unused_configs = true
+
+# Overrides for currently untyped modules
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+ignore_errors = true
