--- a/hdf5-wrapper/pyproject.toml
+++ b/hdf5-wrapper/pyproject.toml
@@ -21,7 +21,26 @@ dependencies = [
 [project.scripts]
     hdf5_wrapper_tests = "geos.hdf5_wrapper.wrapper_tests:main"
 
+
 [tool.mypy]
-python_version = "3.8"
-warn_return_any = true
+# Specify the target platform details in config, so your developers are
+# free to run mypy on Windows, Linux, or macOS and get consistent
+# results.
+python_version = "3.10"
+#exclude = [] 
+# strict = true
+
+warn_unreachable = true
+implicit_reexport = true
+show_error_codes = true
+show_column_numbers = true
+ignore_missing_imports = true
 warn_unused_configs = true
+
+# Overrides for currently untyped modules
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+ignore_errors = true
+
