--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -25,6 +25,25 @@ dependencies = [
 ]
 
 [tool.mypy]
-python_version = "3.8"
-warn_return_any = true
+# Specify the target platform details in config, so your developers are
+# free to run mypy on Windows, Linux, or macOS and get consistent
+# results.
+python_version = "3.10"
+exclude = [
+    'src', # disable mypy check for the whole package corrections are done
+] 
+# strict = true
+
+warn_unreachable = true
+implicit_reexport = true
+show_error_codes = true
+show_column_numbers = true
+ignore_missing_imports = true
 warn_unused_configs = true
+
+# Overrides for currently untyped modules
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+ignore_errors = true
