--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        package-name: ["geos-ats", "geos-mesh", "geos-posp", "geos-prep", "geos-timehistory", "geos-trame", "geos-utils", "geos-xml-tools", "geos-xml-viewer", "hdf5-wrapper", "pygeos-tools"]
+        package-name: ["geos-ats", "geos-mesh", "geos-posp", "geos-timehistory", "geos-trame", "geos-utils", "geos-xml-tools", "geos-xml-viewer", "hdf5-wrapper", "pygeos-tools"]
 
     steps:
     - uses: actions/checkout@v3
