--- a/geos-ats/pyproject.toml
+++ b/geos-ats/pyproject.toml
@@ -59,6 +59,7 @@ include-package-data = true
 python_version = "3.10"
 exclude = [
     'src', # disable mypy check for the whole package corrections are done
+    'build', # exclude build directory
 ] 
 # strict = true
 
