--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -51,6 +51,8 @@ pythonpath = [
 python_version = "3.10"
 exclude = [
     'src', # disable mypy check for the whole package corrections are done
+    'tests',
+    'build', # exclude build directory
 ] 
 # strict = true
 
