--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -64,7 +64,7 @@ search = 'version = "{current_version}"'
 # results.
 python_version = "3.10"
 exclude = [
-    'build', # if local run
+    'build', # exclude build directory
 ]
 # strict = true
 
