--- a/geos-prep/pyproject.toml
+++ b/geos-prep/pyproject.toml
@@ -66,7 +66,9 @@ source = ["PVplugins, geos-prep"]
 # free to run mypy on Windows, Linux, or macOS and get consistent
 # results.
 python_version = "3.10"
-#exclude = [] 
+#exclude = [
+    'build', # exclude build directory
+] 
 # strict = true
 
 warn_unreachable = true
