--- a/geos-timehistory/pyproject.toml
+++ b/geos-timehistory/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
 # results.
 python_version = "3.10"
 exclude = [
-    'build', # build if local run
+    'build', # exclude build directory
 ]
 # strict = true
 
