--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -137,7 +137,7 @@ py_version = 310
 # results.
 python_version = "3.10"
 exclude = [
-    'build', # build if local run
+    'build', # exclude build directory
     'vue-components', # no type checking 
     'src' # disable mypy check for the whole package corrections are done
 ] 
