--- a/geos-xml-viewer/pyproject.toml
+++ b/geos-xml-viewer/pyproject.toml
@@ -102,6 +102,7 @@ source = ["src"]
 # results.
 python_version = "3.10"
 exclude = [
+    'build', # exclude build directory
     'src', # disable mypy check for the whole package corrections are done
     'geos_xml_viewer/algorithms/write_wells.py',
 ] 
