--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
 # results.
 python_version = "3.10"
 exclude = [
+    'build', # exclude build directory
     'src', # disable mypy check for the whole package corrections are done
 ] 
 # strict = true
