--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -1,5 +1,6 @@
-name: geosPythonPackages CI 
-on: pull_request
+name: "Pull Request Typing Check"
+on: 
+- pull_request
 
 # Cancels in-progress workflows for a PR when updated
 concurrency:
@@ -16,7 +17,8 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        package-name: ["geos-ats", "geos-mesh", "geos-posp", "geos-timehistory", "geos-trame", "geos-utils", "geos-xml-tools", "geos-xml-viewer", "hdf5-wrapper", "pygeos-tools"]
+        # add packages to check typing
+        package-name: ["geos-posp", "geos-timehistory", "geos-utils", "geos-xml-tools", "hdf5-wrapper"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,13 +32,10 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov yapf toml
+        python -m pip install mypy
         python -m pip install ./${{ matrix.package-name }}/
-    - name: Lint with yapf
-      # working-directory: ./${{ matrix.package-name }}
-      run: |
-        yapf -r --diff ${{ matrix.package-name }} --style .style.yapf
-    - name: Test with pytest
-      working-directory: ./${{ matrix.package-name }}
-      run: |
-        pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+
+    - name: Typing check with mypy
+      #  working-directory: ./${{ matrix.package-name }}
+      run:  |
+        python -m mypy --config-file ./.mypy.ini --check-untyped-defs ./${{ matrix.package-name }}
