--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -50,7 +50,7 @@ pythonpath = [
 # results.
 python_version = "3.10"
 exclude = [
-    'src', # disable mypy check for the whole package corrections are done
+    'src', # disable mypy check for the whole package until corrections are done
     'tests',
     'build', # exclude build directory
 ] 
