--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 python_version = "3.10"
 exclude = [
     'build', # exclude build directory
-    'src', # disable mypy check for the whole package corrections are done
+    'src', # disable mypy check for the whole package until corrections are done
 ] 
 # strict = true
 
