--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,6 @@ jobs:
       run: |
         yapf -r --diff ${{ matrix.package-name }} --style .style.yapf
     - name: Test with pytest
-      working-directory: ./${{ matrix.package-name }}
+      #working-directory: ./${{ matrix.package-name }}
       run: |
         pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
