--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -16,17 +16,16 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
         # add packages to check typing
         package-name: ["geos-posp", "geos-timehistory", "geos-utils", "geos-xml-tools", "hdf5-wrapper"]
 
     steps:
     - uses: actions/checkout@v3
     - uses: mpi4py/setup-mpi@v1
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.10"
         cache: 'pip'
     - name: Install package
       # working-directory: ./${{ matrix.package-name }}
