--- a/geos-utils/pyproject.toml
+++ b/geos-utils/pyproject.toml
@@ -37,7 +37,7 @@ dev = [
 ]
 test = [
     "pytest",
-    "pytest-cov"
+    "coverage"
 ]
 
 
@@ -57,15 +57,5 @@ filterwarnings = []
 
 [tool.coverage.run]
 branch = true
-source = ["geos/utils"]
+source = ["src/geos/utils"]
 
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-ignore_missing_imports = true
-allow_redefinition = true
-exclude = [
-    'build', # exclude build directory
-] 
