--- a/geos-ats/pyproject.toml
+++ b/geos-ats/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pyyaml",
     "tqdm",
     "requests",
+    "scipy",
     "GitPython",
     "google-cloud-storage",
     "pip-system-certs",
@@ -52,27 +53,21 @@ include-package-data = true
 [tool.setuptools.package-data]
 "*" = ["*.js", "*.css", "*.zip"]
 
-[tool.mypy]
-# Specify the target platform details in config, so your developers are
-# free to run mypy on Windows, Linux, or macOS and get consistent
-# results.
-python_version = "3.10"
-exclude = [
-    'src', # disable mypy check for the whole package until corrections are done
-    'build', # exclude build directory
-] 
-# strict = true
-
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
-
-# Overrides for currently untyped modules
-[[tool.mypy.overrides]]
-module = [
-    "src.*",
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
 ]
-ignore_errors = true
+console_output_style = "count"
+python_classes = "Test"
+python_files = "tests_*.py"
+python_functions = "tests*"
+testpaths = ["tests"]
+pythonpath = [
+    "src",
+]
+norecursedirs = "bin"
+filterwarnings = []
+
+[tool.coverage.run]
+branch = true
+source = ["src/geos/"]
