--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -41,31 +41,5 @@ addopts = [
     "--import-mode=importlib",
 ]
 pythonpath = [
-    "checks", "parsing",
+    "src",
 ]
-
-[tool.mypy]
-# Specify the target platform details in config, so your developers are
-# free to run mypy on Windows, Linux, or macOS and get consistent
-# results.
-python_version = "3.10"
-exclude = [
-    'src', # disable mypy check for the whole package until corrections are done
-    'tests',
-    'build', # exclude build directory
-] 
-# strict = true
-
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
-
-# Overrides for currently untyped modules
-[[tool.mypy.overrides]]
-module = [
-    "tests.*",
-]
-ignore_errors = true
