--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -47,10 +47,6 @@ test = [
    "pytest"
 ]
 
-[tool.coverage.run]
-branch = true
-source = ["PVplugins, geos-posp"]
-
 [tool.bumpversion]
 current_version = "1.0.0"
 
@@ -58,26 +54,17 @@ current_version = "1.0.0"
 filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 
-[tool.mypy]
-# Specify the target platform details in config, so your developers are
-# free to run mypy on Windows, Linux, or macOS and get consistent
-# results.
-python_version = "3.10"
-exclude = [
-    'build', # exclude build directory
-]
-# strict = true
+[tool.pytest.ini_options]
+addopts = "--import-mode=importlib"
+console_output_style = "count"
+pythonpath = [".", "src"]
+python_classes = "Test"
+python_files = "test*.py"
+python_functions = "test*"
+testpaths = ["tests"]
+norecursedirs = "bin"
+filterwarnings = []
 
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
-
-# Overrides for currently untyped modules
-[[tool.mypy.overrides]]
-module = [
-    "tests.*",
-]
-ignore_errors = true
+[tool.coverage.run]
+branch = true
+source = ["PVplugins", "geos-posp"]
