--- a/geos-xml-viewer/pyproject.toml
+++ b/geos-xml-viewer/pyproject.toml
@@ -90,34 +90,9 @@ testpaths = ["tests"]
 pythonpath = [
     "src",
 ]
+norecursedirs = "bin"
+filterwarnings = []
 
 [tool.coverage.run]
 branch = true
-source = ["src"]
-
-
-[tool.mypy]
-# Specify the target platform details in config, so your developers are
-# free to run mypy on Windows, Linux, or macOS and get consistent
-# results.
-python_version = "3.10"
-exclude = [
-    'build', # exclude build directory
-    'src', # disable mypy check for the whole package until corrections are done
-    'geos_xml_viewer/algorithms/write_wells.py',
-] 
-# strict = true
-
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
-
-# Overrides for currently untyped modules
-[[tool.mypy.overrides]]
-module = [
-    "tests.*",
-]
-ignore_errors = true
+source = ["src/geos/"]
