--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -24,27 +24,18 @@ dependencies = [
     "mpi4py",
 ]
 
-[tool.mypy]
-# Specify the target platform details in config, so your developers are
-# free to run mypy on Windows, Linux, or macOS and get consistent
-# results.
-python_version = "3.10"
-exclude = [
-    'build', # exclude build directory
-    'src', # disable mypy check for the whole package until corrections are done
-] 
-# strict = true
+[tool.pytest.ini_options]
+addopts = "--import-mode=importlib"
+console_output_style = "count"
+pythonpath = [".", "src"]
+python_classes = "Test"
+python_files = "test*.py"
+python_functions = "test*"
+testpaths = ["tests"]
+norecursedirs = "bin"
+filterwarnings = []
 
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
+[tool.coverage.run]
+branch = true
+source = ["geos"]
 
-# Overrides for currently untyped modules
-[[tool.mypy.overrides]]
-module = [
-    "tests.*",
-]
-ignore_errors = true
