--- a/geos-xml-viewer/pyproject.toml
+++ b/geos-xml-viewer/pyproject.toml
@@ -93,4 +93,8 @@ filterwarnings = []
 
 [tool.coverage.run]
 branch = true
-source = ["src/geos/"]
+source = ["geos"]
+omit = [
+    "*/PVplugins/*",
+]
+
