--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,7 +30,7 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov yapf toml
+        python -m pip install pytest yapf toml
         python -m pip install ./${{ matrix.package-name }}/
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
@@ -38,5 +38,6 @@ jobs:
         yapf -r --diff ./${{ matrix.package-name }} --style .style.yapf
     - name: Test with pytest
       #working-directory: ./${{ matrix.package-name }}
-      run: |
-         python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      run:
+      # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
+         python -m pytest ./${{ matrix.package-name }}
