--- a/geos-timehistory/pyproject.toml
+++ b/geos-timehistory/pyproject.toml
@@ -16,13 +16,8 @@ classifiers = [
   "Programming Language :: Python"
 ]
 
-requires-python = ">=3.6"
-
-dependencies = [
-    "matplotlib",
-    "h5py",
-    "numpy",
-]
+requires-python = ">=3.9"
+dynamic = ["dependencies"]
 
 [project.scripts]
     plot-timehistory = "geos.timehistory.plot:main"
