--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest yapf toml
-        python -m pip install ./${{ matrix.package-name }}/
+        python -m pip install ./${{ matrix.package-name }}/[test]
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
       run: |
@@ -40,4 +40,5 @@ jobs:
       #working-directory: ./${{ matrix.package-name }}
       run:
       # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
-         python -m pytest ./${{ matrix.package-name }}
+        sh -c 'python -m pytest ./${{ matrix.package-name }}; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+         
