--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,5 +40,6 @@ jobs:
       #working-directory: ./${{ matrix.package-name }}
       run:
       # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
+      # wrap pytest to avoid error when no tests in the package
         sh -c 'python -m pytest ./${{ matrix.package-name }}; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
          
