--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -45,7 +45,8 @@ dependencies = [
     "dpath==2.2.0",
     "colorcet==3.1.0",
     "funcy==2.0",
-    "typing_inspect==0.9.0"
+    "typing_inspect==0.9.0",
+    "StrEnum",
 ]
 
 [project.optional-dependencies]
