--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,6 +8,31 @@ concurrency:
 
 
 jobs:
+  # Checks if PR title follows conventional semantics
+  semantic_pull_request:    
+    permissions:
+      pull-requests: write  # for amannn/action-semantic-pull-request to analyze PRs and 
+      statuses: write  # for amannn/action-semantic-pull-request to mark status of analyzed PR
+      contents: read    
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check if the PR name has conventional semantics
+        if: github.event_name == 'pull_request'
+        uses: amannn/action-semantic-pull-request@v5.5.3
+        id: lint_pr_title
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          wip: true
+          # Configure that a scope doesn't need to be provided.
+          requireScope: false
+    
+      - name: Skip the check on main branch
+        if:  github.ref_name == 'main'
+        run: |
+          echo "This is not a Pull-Request, skipping"
+
   build:
 
     runs-on: ubuntu-22.04
