--- a/geos-pv/pyproject.toml
+++ b/geos-pv/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -16,7 +16,9 @@ classifiers = [
   "Programming Language :: Python"
 ]
 
-requires-python = ">=3.9"
+requires-python = ">=3.10"
+
+dynamic = ["dependencies"]
 
 dependencies = [
     "typing_extensions",
@@ -26,8 +28,3 @@ dependencies = [
 
 [project.scripts]
 
-
-[tool.mypy]
-python_version = "3.9"
-warn_return_any = true
-warn_unused_configs = true
