--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 3
       matrix:
         # add packages to check typing
-        package-name: ["geos-posp", "geos-timehistory", "geos-utils", "geos-xml-tools", "hdf5-wrapper"]
+        package-name: ["hdf5-geomechanics", "geos-posp", "geos-timehistory", "geos-utils", "geos-xml-tools", "hdf5-wrapper"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,9 +30,14 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install mypy
+        python -m pip install mypy ruff
 
     - name: Typing check with mypy
       #  working-directory: ./${{ matrix.package-name }}
       run:  |
         python -m mypy --config-file ./.mypy.ini --check-untyped-defs ./${{ matrix.package-name }}
+
+    - name: Format and linting check with ruff
+      #  working-directory: ./${{ matrix.package-name }}
+      run:  |
+        python -m ruff check --config .ruff.toml ./geos-utils
