--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -23,8 +23,8 @@ classifiers = [
 requires-python = ">=3.8"
 
 dependencies = [
+    "geos-utils @ file:./geos-utils",
     "matplotlib",
-    "numpy",
     "scipy",
     "mpi4py",
     "vtk",
@@ -32,7 +32,7 @@ dependencies = [
     "xmltodict",
     "h5py",
     "segyio",
-    "numba"
+    "numba",
 ]
 
 [project.urls]
