--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -24,6 +24,7 @@ requires-python = ">=3.8"
 
 dependencies = [
     "geos-utils @ file:./geos-utils",
+    "geos-mesh @ file:./geos-mesh",
     "matplotlib",
     "scipy",
     "mpi4py",
