--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: ammaraskar/sphinx-action@dev
       with:
         docs-folder: "docs/"
-        build-command: "sphinx-build -b html . _build"
+        build-command: "sphinx-build -b html . _build -W"
