--- a/geos-geomechanics/pyproject.toml
+++ b/geos-geomechanics/pyproject.toml
@@ -21,7 +21,13 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python"
 ]
-dynamic = ["dependencies"]
+dependencies=[
+    "vtk >= 9.3",
+    "numpy >= 1.26",
+    "pandas >= 2.2",
+    "typing_extensions >= 4.12",
+    "geos-utils @ file:./geos-utils",
+]
 requires-python = ">= 3.10"
 
 [project.optional-dependencies]
