Fix build projects with invalid path

--- a/geos-geomechanics/pyproject.toml
+++ b/geos-geomechanics/pyproject.toml
@@ -7,7 +7,7 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["geos_geomechanics*"]
+include = ["geos.geomechanics*"]
 exclude = ['tests*']
 
 [project]
