ci: Modify doc CI to return error if warnings and update doc (#79)
* Modify doc ci to return error if warnings are present
Update docs to pass the new ci
Add geos-xml-viewer to the doc

* Add vtk to mock imports

* Add vtk install to remove libGL error

* Try add install libgl1

* Try add install libgl1 with sudo

* change libGL package name

* add doc ci config

* Modify vtk import for doc ci and linting

* Simplify ci config

* Update doc geos-xml-viewer

--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -2,6 +2,11 @@ name: "Pull Request Docs Check"
 on: 
 - pull_request
 
+# Cancels in-progress workflows for a PR when updated
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -10,4 +15,4 @@ jobs:
     - uses: ammaraskar/sphinx-action@dev
       with:
         docs-folder: "docs/"
-        build-command: "sphinx-build -b html . _build"
+        build-command: "sphinx-build -b html . _build -W"
